--- a/package.json
+++ b/package.json
@@ -12,15 +12,24 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix && yarn format",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "server:dev": "node --watch server/index.js",
+    "server:start": "node server/index.js"
   },
   "dependencies": {
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "pinia": "^2.1.7"
+    "pinia": "^2.1.7",
+    "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mariadb": "^3.2.2"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/express": "^4.17.21",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.2.1",
