feat: Claude add Docker build

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
 # Variables d'environnement pour le serveur API
-DB_HOST=localhost
+# Remplacez ces valeurs par les informations de connexion à votre serveur MariaDB externe
+DB_HOST=192.168.1.30
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=
+DB_USER=utilisateur_db
+DB_PASSWORD=mot_de_passe_securise
 DB_DATABASE=baby_check
 SERVER_PORT=3000
 
 # Variables d'environnement pour le client Vue.js
 VITE_API_URL=http://localhost:3000/api
+
+# Variables d'environnement pour MariaDB dans Docker
+MYSQL_ROOT_PASSWORD=rootpassword
