--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "docker:build": "docker buildx build --platform linux/amd64 -t baby-check-api:latest .",
+    "docker:push": "../scripts/docker-push.sh baby-check-api latest"
   },
   "type": "commonjs",
   "dependencies": {
