--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "docker:push-all": "npm run docker:push && cd server && npm run docker:push && cd .."
   },
   "dependencies": {
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "pinia": "^2.1.7",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mariadb": "^3.2.2"
+    "mariadb": "^3.2.2",
+    "pinia": "^2.1.7",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
