--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baby-check",
-  "version": "0.0.0",
+  "version": "1.1.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -57,7 +57,9 @@
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
     "vite": "^6.2.1",
+    "vite-plugin-pwa": "^1.0.1",
     "vitest": "^3.0.8",
     "vue-tsc": "^2.2.8"
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
