--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baby-check",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "private": true,
   "type": "module",
   "scripts": {
@@ -50,12 +50,12 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.21.0",
-    "eslint-plugin-vue": "~10.0.0",
+    "eslint-plugin-vue": "^10.0.0",
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
-    "prettier": "3.5.3",
-    "typescript": "~5.8.0",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.0",
     "vite": "^6.2.1",
     "vite-plugin-pwa": "^1.0.1",
     "vitest": "^3.0.8",
